--- a/Src/iFramework.Plugins/IFramework.DependencyInjection.Unity/IFramework.DependencyInjection.Unity.csproj
+++ b/Src/iFramework.Plugins/IFramework.DependencyInjection.Unity/IFramework.DependencyInjection.Unity.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Version>2.0.0-prelease-0001</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
