--- a/Src/IFramework.Test/log4net.config
+++ b/Src/IFramework.Test/log4net.config
@@ -60,17 +60,20 @@
   <root>
     <!--all priority options： OFF、FATAL、ERROR, WARN, INFO, DEBUG, ALL-->
     <!--取消这里注释记录所有debug log -->
-    <appender-ref ref="debugRollingFile" />
     <appender-ref ref="errorRollingFile" />
     <appender-ref ref="traceAppender" />
   </root>
   <!--取消注释下面节, 指定name 的 debug log, 注意name是在logger.create时用的是className还是namespace.className -->
-  <!--<logger name="logger name">  
+  <logger name="IFramework.Test">  
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
-  </logger>-->
+  </logger>
   <!--<logger name="CommandBus">
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
+  </logger>-->
+  <!--<logger name="Microsoft.EntityFrameworkCore.Database.Command">
+    <level value="INFO"/>
+    <appender-ref ref="traceAppender"/>
   </logger>-->
 </log4net>
