--- a/Src/Sample/Sample.Applications/Sample.Applications.csproj
+++ b/Src/Sample/Sample.Applications/Sample.Applications.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Sample.Command\Sample.Command.csproj" />
     <ProjectReference Include="..\Sample.Domain\Sample.Domain.csproj" />
   </ItemGroup>
 
