--- a/Src/iFramework.Plugins/IFramework.MessageQueue.RabbitMQ/IFramework.MessageQueue.RabbitMQ.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageQueue.RabbitMQ/IFramework.MessageQueue.RabbitMQ.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>2.0.0</Version>
-    <PackageReleaseNotes></PackageReleaseNotes>
+    <Version>2.0.1</Version>
+    <PackageReleaseNotes>Use ConnectionFactory as the parameter of UseRabbitMQ</PackageReleaseNotes>
     <Authors>Ivan</Authors>
     <Description>Supports netcore standard2.0</Description>
   </PropertyGroup>
