--- a/Src/iFramework.Plugins/IFramework.MessageStores.Abstracts/IFramework.MessageStores.Abstracts.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageStores.Abstracts/IFramework.MessageStores.Abstracts.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>2.1.0-prerelease</Version>
+    <Version>2.1.0-prerelease-0001</Version>
     <Authors>Ivan</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
