--- a/Src/iFramework.Plugins/IFramework.MessageStores.MongoDb/IFramework.MessageStores.MongoDb.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageStores.MongoDb/IFramework.MessageStores.MongoDb.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>2.1.0-prerelease</Version>
+    <Version>2.1.0-prerelease-0001</Version>
     <Authors>Ivan</Authors>
     <Company>Ivan</Company>
   </PropertyGroup>
