--- a/Src/iFramework.Plugins/IFramework.Logging.Log4Net/IFramework.Logging.Log4Net.csproj
+++ b/Src/iFramework.Plugins/IFramework.Logging.Log4Net/IFramework.Logging.Log4Net.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="3.0.0-preview9.19423.4" />
     <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="2.2.12" />
   </ItemGroup>
 
