--- a/Src/nuget.config
+++ b/Src/nuget.config
@@ -1,9 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-    <add key="beta-feed" value="https://dotnet.myget.org/F/dotnet-core/api/v3/index.json" />
-    <add key="aspnetcore-dev.myget" value="https://dotnet.myget.org/F/aspnetcore-dev/api/v3/index.json" />
-    <add key="aspnetcore-mongodb" value="https://www.myget.org/F/efcore-mongodb/api/v3/index.json" />
+    <clear />
+    <add key="dotnet-core" value="https://dotnetfeed.blob.core.windows.net/dotnet-core/index.json" />
+    <add key="extensions" value="https://dotnetfeed.blob.core.windows.net/aspnet-extensions/index.json" />
+    <add key="entityframeworkcore" value="https://dotnetfeed.blob.core.windows.net/aspnet-entityframeworkcore/index.json" />
+    <add key="entityframework6" value="https://dotnetfeed.blob.core.windows.net/aspnet-entityframework6/index.json" />
+    <add key="aspnetcore-tooling" value="https://dotnetfeed.blob.core.windows.net/aspnet-aspnetcore-tooling/index.json" />
+    <add key="aspnetcore" value="https://dotnetfeed.blob.core.windows.net/aspnet-aspnetcore/index.json" />
+    <add key="aspnet-blazor" value="https://dotnetfeed.blob.core.windows.net/aspnet-blazor/index.json" />
+    <add key="NuGet.org" value="https://api.nuget.org/v3/index.json" />
+    <!--<add key="aspnetcore-dev.myget" value="https://dotnet.myget.org/F/aspnetcore-dev/api/v3/index.json" />-->
+    <!--<add key="aspnetcore-mongodb" value="https://www.myget.org/F/efcore-mongodb/api/v3/index.json" />
+    <add key="beta-feed" value="https://dotnet.myget.org/F/dotnet-core/api/v3/index.json" />-->
   </packageSources>
 </configuration>
