--- a/Src/iFramework.Plugins/IFramework.JsonNetCore/IFramework.JsonNet.csproj
+++ b/Src/iFramework.Plugins/IFramework.JsonNetCore/IFramework.JsonNet.csproj
@@ -22,7 +22,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3-beta1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
