--- a/Src/iFramework.Plugins/IFramework.EventStore.Redis/IFramework.EventStore.Redis.csproj
+++ b/Src/iFramework.Plugins/IFramework.EventStore.Redis/IFramework.EventStore.Redis.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\iFramework\IFramework.csproj" />
+    <ProjectReference Include="..\IFramework.Infrastructure.EventSourcing\IFramework.Infrastructure.EventSourcing.csproj" />
   </ItemGroup>
 
 </Project>
