--- a/Src/iFramework.Plugins/IFramework.Infrastructure.EventSourcing/IFramework.Infrastructure.EventSourcing.csproj
+++ b/Src/iFramework.Plugins/IFramework.Infrastructure.EventSourcing/IFramework.Infrastructure.EventSourcing.csproj
@@ -1,11 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\iFramework\IFramework.csproj" />
+    <ProjectReference Include="..\IFramework.EntityFrameworkCore\IFramework.EntityFrameworkCore.csproj" />
   </ItemGroup>
 
 </Project>
