--- a/Src/iFramework.Plugins/IFramework.JsonNetCore/IFramework.JsonNet.csproj
+++ b/Src/iFramework.Plugins/IFramework.JsonNetCore/IFramework.JsonNet.csproj
@@ -9,7 +9,15 @@
     <RootNamespace>IFramework.JsonNet</RootNamespace>
     <Description>Supports netcore standard2.0</Description>
     <PackageReleaseNotes>Add ToJson(this object obj, JsonSerializerSettings settings)</PackageReleaseNotes>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <NoWarn>1701;1702;1591</NoWarn>
